--- a/first-angular-app/src/app/components/header/header.component.html
+++ b/first-angular-app/src/app/components/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header-1 works!</p>
+<header>
+    <img src="task-management-logo.png" alt="Logo">
+    <div>
+        <h1>EasyTrack</h1>
+        <p>Enterprise level task management without friction</p>
+    </div>
+</header>
