--- a/first-angular-app/src/app/components/user/user.component.html
+++ b/first-angular-app/src/app/components/user/user.component.html
@@ -1,4 +1,5 @@
 <div>
+    <span>{{randomNumber().id}} {{randomComputedValue()}}</span>
     <button (click)="onSelectUser()">
         <!-- Property binding -->
         <!-- Getter Method -->
