--- a/first-angular-app/src/app/components/user/user.component.html
+++ b/first-angular-app/src/app/components/user/user.component.html
@@ -2,9 +2,9 @@
     <button (click)="onSelectUser()">
         <!-- Property binding -->
         <!-- Getter Method -->
-        <img [src]="userAvatar" alt="{{user().avatar}}" />
+        <img [src]="userAvatar" alt="{{user.avatar}}" />
 
         <!-- String interpolation -->
-        <span>{{user().name}}</span>
+        <span>{{user.name}}</span>
     </button>
 </div>
