--- a/first-angular-app/src/app/app.component.html
+++ b/first-angular-app/src/app/app.component.html
@@ -1,8 +1,15 @@
 <app-header></app-header>
 <main>
     <ul id="users">
-        <li *ngFor="let user of users">
+        @for(user of users; track user.id) {
+        <li>
             <app-user [user]="user" (selectedUser)="onUserSelect($event)"></app-user>
         </li>
+        }
     </ul>
+    @if(selectedUser?.id) {
+    <app-tasks [selectedUser]="selectedUser"></app-tasks>
+    } @else {
+    <p id="fallback">Select a user to see tasks</p>
+    }
 </main>
