add tasks for users

--- a/first-angular-app/src/app/components/tasks/tasks.component.html
+++ b/first-angular-app/src/app/components/tasks/tasks.component.html
@@ -1,3 +1,19 @@
-<div>
-    <span>{{selectedUser?.name}}</span>
-</div>
+<section id="tasks">
+    <header>
+        <h2>
+            {{selectedUser?.name}}'s Tasks
+        </h2>
+        <menu>
+            <button (click)="onNewTask()">New Task</button>
+        </menu>
+    </header>
+
+    <ul>
+        @for (task of userTasks; track task.id) {
+        <li>
+            <app-task [task]="task"></app-task>
+        </li>
+        }
+    </ul>
+
+</section>
