--- a/first-angular-app/src/app/components/tasks/task/task.component.html
+++ b/first-angular-app/src/app/components/tasks/task/task.component.html
@@ -3,6 +3,6 @@
     <time>{{task.dueDate}}</time>
     <p>{{task.summary}}</p>
     <p class="actions">
-        <button (click)="onTaskComplete()">Mark Complete</button>
+        <button (click)="onComplete()">Mark Complete</button>
     </p>
 </article>
