--- a/first-angular-app/src/app/components/user/user.component.html
+++ b/first-angular-app/src/app/components/user/user.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button (click)="onSelectUser()">
+    <button (click)="onSelectUser()" [class.active]="selected">
         <!-- Property binding -->
         <!-- Getter Method -->
         <img [src]="userAvatar" alt="{{user.avatar}}" />
