--- a/first-angular-app/src/app/components/user/user.component.scss
+++ b/first-angular-app/src/app/components/user/user.component.scss
@@ -19,7 +19,7 @@ div {
 
         &:hover,
         &:active,
-        .active {
+        &.active {
             background-color: #9965dd;
             color: #150722;
         }
