--- a/first-angular-app/src/app/components/user/user.component.html
+++ b/first-angular-app/src/app/components/user/user.component.html
@@ -1,4 +1,4 @@
-<div>
+<app-card>
     <button (click)="onSelectUser()" [class.active]="selected">
         <!-- Property binding -->
         <!-- Getter Method -->
@@ -7,4 +7,4 @@
         <!-- String interpolation -->
         <span>{{user.name}}</span>
     </button>
-</div>
+</app-card>
