--- a/first-angular-app/src/app/app.component.html
+++ b/first-angular-app/src/app/app.component.html
@@ -9,7 +9,7 @@
         }
     </ul>
     @if(selectedUser?.id) {
-    <app-tasks [selectedUser]="selectedUser"></app-tasks>
+    <app-tasks [selectedUser]="selectedUser!"></app-tasks>
     } @else {
     <p id="fallback">Select a user to see tasks</p>
     }
