--- a/components-and-templates/src/app/components/header/header.component.html
+++ b/components-and-templates/src/app/components/header/header.component.html
@@ -12,11 +12,9 @@
                 <a href="/">Management</a>
             </li>
             <li>
-                <button>
-                    <span>
-                        Logout
-                    </span>
-                    <span class="icon">
+                <button appButton>
+                    Logout
+                    <span ngProjectAs="btnIcon">
                         →
                     </span>
                 </button>
