--- a/components-and-templates/src/app/components/shared/button/button.component.html
+++ b/components-and-templates/src/app/components/shared/button/button.component.html
@@ -1,8 +1,6 @@
-<button>
-    <span>
-        Submit
-    </span>
-    <span class="icon">
-        ⌲
-    </span>
-</button>
+<span>
+    <ng-content></ng-content>
+</span>
+<span class="icon">
+    <ng-content select="btnIcon"></ng-content>
+</span>
