--- a/components-and-templates/src/app/components/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/components-and-templates/src/app/components/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,18 +1,16 @@
 <form>
-    <p>
-        <label>Title</label>
+    <app-control [label]="'Title'">
         <input name="title" id="title" />
-    </p>
-    <p>
-        <label>Request</label>
+    </app-control>
+    <app-control [label]="'Request'">
         <textarea name="request" id="request" rows="3"></textarea>
-    </p>
+    </app-control>
     <p>
-        <button>
-            <span>
+        <button appButton>
+            <span ngProjectAs="btnText">
                 Submit
             </span>
-            <span class="icon">
+            <span ngProjectAs="btnIcon">
                 ⌲
             </span>
         </button>
