update server status randomly

--- a/components-and-templates/src/app/components/dashboard/server-status/server-status.component.html
+++ b/components-and-templates/src/app/components/dashboard/server-status/server-status.component.html
@@ -1,4 +1,7 @@
-<div id="status">
+<div [class]="{'status':true, 
+    'status-online':currentStatus=='online', 
+    'status-offline':currentStatus=='offline', 
+    'status-unknown':currentStatus=='unknown'}">
     @if (currentStatus === 'online') {
     <p>Servers are online</p>
     <p>All systems are operational.</p>
