--- a/components-and-templates/src/app/components/dashboard/server-status/server-status.component.html
+++ b/components-and-templates/src/app/components/dashboard/server-status/server-status.component.html
@@ -1,11 +1,11 @@
 <div [class]="{'status':true, 
-    'status-online':currentStatus=='online', 
-    'status-offline':currentStatus=='offline', 
-    'status-unknown':currentStatus=='unknown'}">
-    @if (currentStatus === 'online') {
+    'status-online':currentStatus()=='online', 
+    'status-offline':currentStatus()=='offline', 
+    'status-unknown':currentStatus()=='unknown'}">
+    @if (currentStatus() === 'online') {
     <p>Servers are online</p>
     <p>All systems are operational.</p>
-    } @else if (currentStatus === 'offline') {
+    } @else if (currentStatus() === 'offline') {
     <p>Servers are offline</p>
     <p>Functionality should be restored soon.</p>
     } @else {
