--- a/components-and-templates/src/app/components/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/components-and-templates/src/app/components/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,12 +1,13 @@
-<form>
+<form (ngSubmit)="onSubmit()">
+
     <app-control [label]="'Title'">
-        <input name="title" id="title" />
+        <input name="title" id="title" #title #input />
     </app-control>
     <app-control [label]="'Request'">
-        <textarea name="request" id="request" rows="3"></textarea>
+        <textarea name="request" id="request" rows="3" #request #input></textarea>
     </app-control>
     <p>
-        <button appButton>
+        <button appButton type="submit">
             Submit
             <span ngProjectAs="btnIcon">
                 ⌲
