--- a/directives/src/app/learning-resources/learning-resources.component.html
+++ b/directives/src/app/learning-resources/learning-resources.component.html
@@ -1,14 +1,14 @@
 <h2>Learning Resources</h2>
-<p>Helpful resources you might want to use in addition to this course.</p>
+<p appLogger>Helpful resources you might want to use in addition to this course.</p>
 
 <ul>
     <li>
         <a href="https://angular.dev" appSafeLink="111">Angular Documentation</a>
     </li>
     <li>
-        <a href="https://academind.com/courses">Academind Courses</a>
+        <a href="https://academind.com/courses" appSafeLink="222">Academind Courses</a>
     </li>
     <li>
-        <a href="https://www.google.com/search?q=angular">Google</a>
+        <a href="https://www.google.com/search?q=angular" appSafeLink="333">Google</a>
     </li>
 </ul>
