--- a/pipes/src/app/app.component.html
+++ b/pipes/src/app/app.component.html
@@ -7,10 +7,10 @@
                 <p>{{ currentDate | date:'medium'}}</p>
             </div>
         </header>
-        <p>New York: {{ currentTemperaturs.newYork | number:'1.1-2'}}</p>
-        <p>Berlin: {{ currentTemperaturs.berlin | number:'1.1-2'}}</p>
-        <p>Paris: {{ currentTemperaturs.paris | number:'1.1-2' }}</p>
-        <p>Chicago: {{ currentTemperaturs.chicago | number:'1.1-2'}}</p>
+        <p>New York: {{ currentTemperaturs.newYork |temperature:"fahrenheit":"celsius"}}</p>
+        <p>Berlin: {{ currentTemperaturs.berlin | temperature:"celsius":"fahrenheit"}}</p>
+        <p>Paris: {{ currentTemperaturs.paris | temperature:"celsius":"celsius" }}</p>
+        <p>Chicago: {{ currentTemperaturs.chicago | temperature:"fahrenheit":"fahrenheit"}}</p>
     </article>
 
     <article class="temperatures">
@@ -22,8 +22,8 @@
             </div>
         </header>
         <ul>
-            @for (temperature of historicTemperatures; track temperature) {
-            <li (click)="onReset($index)">{{ temperature }}</li>
+            @for (temperature of historicTemperatures; track $index) {
+            <li (click)="onReset($index)">{{ temperature}}</li>
             }
         </ul>
     </article>
