sorting using a pipe

--- a/pipes/src/app/app.component.html
+++ b/pipes/src/app/app.component.html
@@ -22,8 +22,8 @@
             </div>
         </header>
         <ul>
-            @for (temperature of historicTemperatures; track $index) {
-            <li (click)="onReset($index)">{{ temperature}}</li>
+            @for (temperature of historicTemperatures | sort:'dec'; track $index) {
+            <li (click)="onReset($index)">{{ temperature | temperature:'celsius'}}</li>
             }
         </ul>
     </article>
