add httpclient to provider. Basic get and put

--- a/HTTP/src/app/places/available-places/available-places.component.html
+++ b/HTTP/src/app/places/available-places/available-places.component.html
@@ -1,7 +1,15 @@
 <app-places-container title="Available Places">
-  @if (places()) {
-  <app-places [places]="places()!" />
-  } @else if (places()?.length === 0) {
-  <p class="fallback-text">Unfortunately, no places could be found.</p>
-  }
+
+    @if (isLoading() && !isError()) {
+        <p class="fallback-text">Loading...</p>
+    }@else if (isError()) {
+        <p class="fallback-text">An error occurred. Please try again later.</p>
+    } @else {
+        @if (places()) {
+            <app-places [places]="places()!" />
+        } @else if (places()?.length === 0) {
+            <p class="fallback-text">Unfortunately, no places could be found.</p>
+        }
+    }
+    
 </app-places-container>
