--- a/HTTP/src/app/places/user-places/user-places.component.html
+++ b/HTTP/src/app/places/user-places/user-places.component.html
@@ -1,3 +1,13 @@
 <app-places-container title="Your Favorite Places">
-  <p>Todo...</p>
+    @if (isLoading() && !isError()) {
+    <p class="fallback-text">Loading...</p>
+    }@else if (isError()) {
+    <p class="fallback-text">An error occurred. Please try again later.</p>
+    } @else {
+    @if (places()) {
+    <app-places [places]="places()!" />
+    } @else if (places()?.length === 0) {
+    <p class="fallback-text">Unfortunately, no places could be found.</p>
+    }
+    }
 </app-places-container>
