--- a/HTTP/src/app/app.component.html
+++ b/HTTP/src/app/app.component.html
@@ -1,3 +1,7 @@
+@if (error()) {
+<app-error-modal title="Error Occured" [message]="error()"></app-error-modal>
+}
+
 <header>
     <img src="logo.png" alt="Stylized globe" />
     <h1>PlacePicker</h1>
