reactive form init

--- a/Forms/src/app/auth/login/login.component.html
+++ b/Forms/src/app/auth/login/login.component.html
@@ -1,27 +1,17 @@
-<form #form="ngForm" (ngSubmit)="onSubmit(form)">
+<form>
     <h2>Login</h2>
 
     <div class="control-row">
         <div class="control no-margin">
             <label for="email">Email</label>
-            <input id="email" type="email" name="email" ngModel required email #email="ngModel" />
+            <input id="email" type="email" />
         </div>
 
         <div class="control no-margin">
             <label for="password">Password</label>
-            <input id="password" type="password" name="password" ngModel required minlength="8" maxlength="32"
-                #password="ngModel" />
+            <input id="password" type="password" />
         </div>
 
         <button class="button">Login</button>
     </div>
-    @if (form.form.invalid && email.touched && password.touched) {
-    <p class="control-error">Invalid Values</p>
-    }
-    @if (email.touched && email.invalid && email.dirty) {
-    <p class="control-error">Invalid Email</p>
-    }
-    @if (email.touched && email.invalid && email.dirty) {
-    <p class="control-error">PAssword should be 8-32 chars only</p>
-    }
 </form>
