--- a/routing/src/app/app.component.html
+++ b/routing/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-header />
 
 <main>
-  <app-users />
+    <app-users />
 
-  <div>
-    <p>Todo ...</p>
-  </div>
+    <div>
+        <router-outlet></router-outlet>
+    </div>
 </main>
