--- a/routing/src/app/tasks/tasks.component.html
+++ b/routing/src/app/tasks/tasks.component.html
@@ -1,9 +1,15 @@
+<p>
+    <a routerLink="./" [queryParams]="{order: order() === 'asc' ? 'desc' : 'asc'}">
+        Sort {{ order() === 'asc' ? 'Descending' : 'Ascending' }}
+    </a>
+</p>
+
 <ul>
-  @for (task of userTasks; track task.id) {
+    @for (task of userTasks(); track task.id) {
     <li>
-      <app-task [task]="task" />
+        <app-task [task]="task" />
     </li>
-  } @empty {
+    } @empty {
     <p>There are no tasks yet. Start adding some!</p>
-  }
+    }
 </ul>
