--- a/routing/src/app/users/user-tasks/user-tasks.component.html
+++ b/routing/src/app/users/user-tasks/user-tasks.component.html
@@ -1,10 +1,12 @@
 <section id="tasks">
-  <header>
-    <h2>USERS Tasks</h2>
-    <menu>
-      <a>Add Task</a>
-    </menu>
-  </header>
+    {{message()}}
+    <header>
+        <h2>{{userName()}}'s Tasks</h2>
+        <menu>
+            <a routerLink="tasks/new">Add Task</a>
+        </menu>
+    </header>
 
-  <p>Todo ...</p>
+    <router-outlet></router-outlet>
+
 </section>
