--- a/routing/src/app/users/user/user.component.html
+++ b/routing/src/app/users/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
-  <a>
-    <img [src]="imagePath()" [alt]="user().name" />
-    <span>{{ user().name }}</span>
-  </a>
+    <a [routerLink]="'/users/'+user().id" routerLinkActive="selected">
+        <img [src]="imagePath()" [alt]="user().name" />
+        <span>{{ user().name }}</span>
+    </a>
 </div>
